<resources>
    <string name="app_name">K22411CASampleProject</string>
    <string name="title_login_username">User name:</string>
    <string name="title_login_username_hint">Enter your username</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_save_infor">Save login infor</string>
    <string name="title_login_button_login">Login</string>
    <string name="title_confirm_exit">Confirm Exit</string>
    <string name="title_confirm_exit_message">Are you sure you want to exit</string>
    <string name="title_confirm_exit_oke">Yes</string>
    <string name="title_confirm_exit_cancel">No</string>
    <string name="title_main_employee">Employee</string>
    <string name="title_main_customer">Customer</string>
    <string name="title_health_care">Healthcare</string>
    <string name="title_money">Money</string>
    <string name="title_employee_healthcare">Employee Health care</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_results" />

</resources>